# Blitwizard

./: .gitignore  AUTHORS.txt  Credits.txt  ISSUES.txt  LICENSE.txt  Makefile.am  README-deps.txt  README-libs.txt  README.txt  Ship-your-game.txt  config.h.in  config.ld.template  configure.ac  listsources.lua
docs/: index.html
docs/modules/: blitwizard.audio.html  blitwizard.console.html  blitwizard.debug.html  blitwizard.font.html  blitwizard.graphics.html  blitwizard.html  blitwizard.net.html  blitwizard.net.http.html  blitwizard.net.irc.html  blitwizard.physics.html  os.html  string.html  vector.html
examples/01.helloworld/: game.lua
examples/02.simplecar/: game.lua
examples/03.sound/: game.lua
examples/04.scalerotate/: game.lua
examples/05.physics/: game.lua
examples/06.movingcharacter/: game.lua
scripts/: builddeps.sh  checksse.sh  coverity.sh
src/: Makefile.am  audio.c  audio.h  audiomixer.c  audiomixer.h  audiosourcefadepanvol.c  audiosourcefadepanvol.h  audiosourceffmpeg.c  audiosourceffmpeg.h  audiosourcefile.c  audiosourcefile.h  audiosourceflac.c  audiosourceflac.h  audiosourceformatconvert.c  audiosourceformatconvert.h  audiosourceloop.c  audiosourceloop.h  audiosourceogg.c  audiosourceogg.h  audiosourceprereadcache.c  audiosourceprereadcache.h  audiosourceresample.c  audiosourceresample.h  audiosourceresourcefile.c  audiosourceresourcefile.h  audiosourcewave.c  avl-tree-helpers.c  avl-tree-helpers.h  blitwizard_opengl.h  blitwizardobject.h  connections.c  connections.h  diskcache.c  diskcache.h  file.c  file.h  filelist.c  filelist.h  graphics.c  graphics.h  (+126 more)
src/avl-tree/: avl-tree.c  avl-tree.h
src/ctests/: test-imgloader-basic.c  test-imgloader-colors.c  test-imgloader.c  test-texman-1.c  test-texman-2dsprites.c  test-texman-availability.c  test-texman-basic.c  testimagepaths.h  texmanassertions.c
src/imgloader/: Makefile  imgloader.c  imgloader.h  pngloader.c  pngloader.h
src/luatests/: Makefile  Makefile.am  createobject.sh  filelist.sh  getvisiblegetzindex.sh  movecamera.sh  physicsgc.sh  preparetest.sh  setgetmass.sh  setmode.sh  textureusagereport.sh  zipdofile.sh  zipls.sh
src/skiplist/: skiplist.h  skiplist_config.h
src/tests/: Makefile.am
src/tests/ctests/: imgloader.c
src/tests/luatests/: filelist.sh  movecamera.sh  zipls.sh
templates/: init.lua
templates/console/: console.lua  reload.lua
templates/debug/: debug.lua
templates/font/: default_big_png_license.txt  default_png_license.txt  font.lua
templates/http/: http.lua
templates/irc/: irc.lua
templates/tmxmap/: tmxmap.lua
tests/: Makefile.am  preparetest.sh
tests/luatests/: createobject.sh  getvisiblegetzindex.sh  movecamera.sh  physicsgc.sh  setgetmass.sh  setmode.sh  textureusagereport.sh  zipls.sh
